Hair Shape Cut Crash in 2.8 #62808

Closed
opened 2019-03-21 10:35:49 +01:00 by sineo · 5 comments

System Information
Operating system: Windows
CPU : AMD Ryzen 5 1500X
GPU : Nvidia GTX 1070

Blender Version
Broken: 2.80, a280867ac2, master, 2019-03-07
Worked: 2.79

Short description of error :
Blender crashes instantly when clicking on "Shape Cut" button.

Steps to reproduce the error :
Create a uv sphere.
Create hair particles on the sphere.
Create a cube.
Enter particle edit mode on the sphere.
Select "cube" as shape cut object.
Click on "Shape Cut" button.

Screenshot_1.png

**System Information** Operating system: Windows CPU : AMD Ryzen 5 1500X GPU : Nvidia GTX 1070 **Blender Version** Broken: 2.80, a280867ac2ed, master, 2019-03-07 Worked: 2.79 **Short description of error :** Blender crashes instantly when clicking on "Shape Cut" button. **Steps to reproduce the error :** Create a uv sphere. Create hair particles on the sphere. Create a cube. Enter particle edit mode on the sphere. Select "cube" as shape cut object. Click on "Shape Cut" button. ![Screenshot_1.png](https://archive.blender.org/developer/F6859803/Screenshot_1.png)
Author

Added subscriber: @sineostudio

Added subscriber: @sineostudio

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Confirmed here on macOS.

Crash log:
crashlog.txt

Here's a blend file already set up:
hair_cut_crash.blend

Simply click the Cut button under Options inside the Tool Properties and you should be able to get a crash.

@sineostudio Next time, always test with the latest nightly betas before reporting.

Confirmed here on macOS. Crash log: [crashlog.txt](https://archive.blender.org/developer/F6859962/crashlog.txt) Here's a blend file already set up: [hair_cut_crash.blend](https://archive.blender.org/developer/F6859974/hair_cut_crash.blend) Simply click the Cut button under Options inside the Tool Properties and you should be able to get a crash. @sineostudio Next time, always test with the latest nightly betas before reporting.

This issue was referenced by 75b14db6a9

This issue was referenced by 75b14db6a969b43121884befd15e990cd4e5f5fa
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62808
No description provided.