Fix T62808: Hair shape cut crash

Reviewers: sergey

Differential Revision: https://developer.blender.org/D4565